--- a/apps/dashboard/src/app/species/species-details/species-details.component.html
+++ b/apps/dashboard/src/app/species/species-details/species-details.component.html
@@ -18,7 +18,7 @@
         type="text"
         name="title"
         />
-        <mat-error *ngIf="form.get('title')">Required</mat-error>
+        <mat-error *ngIf="form.get('title')">Required Field</mat-error>
       </mat-form-field>
 
       <mat-form-field class="full-width">
